@@ -21,6 +21,7 @@
 2005-09-15  Sam Steingold  <sds@gnu.org>
 
 	* modules/bindings/win32/win32.lisp (GetCurrentThreadId): added
+	* modules/bindings/win32/test.tst: new file
 
 2005-09-15  Sam Steingold  <sds@gnu.org>
 
